--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,12 @@
 		-webkit-text-size-adjust: none;
 	}
 
+	#map {
+		margin:auto;
+		width:80%;
+		height:400px;
+	}
+
 /* Box Model */
 
 	*, *:before, *:after {
@@ -1177,7 +1183,11 @@
 	}
 
 	@media screen and (max-width: 480px) {
-
+		#map {
+			margin:auto;
+			width:80%;
+			height:400px;
+		}
 		.row > * {
 			padding: 0 0 0 1.5em;
 		}
