--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,7 +50,7 @@
 		-webkit-text-size-adjust: none;
 	}
 
-	#map {
+	.map {
 		margin:auto;
 		width:80%;
 		height:400px;
@@ -1183,7 +1183,7 @@
 	}
 
 	@media screen and (max-width: 480px) {
-		#map {
+		.map {
 			margin:auto;
 			width:80%;
 			height:300px;
